Adiciona a parte de contado (não funcional)

--- a/index.html
+++ b/index.html
@@ -36,6 +36,57 @@
                 </main>
             </div>
 
+            <div id="page-contact" class="container">
+                <section id="contact-flyer">
+                    <div id="location-advise">
+                        <h2 class="nunito">Entre em contato conosco</h2>
+                        <p>Estamos atendendo apenas em Cachoeiras de Macacu, RJ (Centro).</p>
+                    </div>
+
+                    <div id="price-advise">
+                        <p class="icon-wallet"></p>
+                        <h3>Desconto</h3>
+                        <p>Novos clientes recebem descontos de até 50% em nossos serviços.</p>
+                    </div>
+                </section>
+                <section id="contact-form">
+                    <form class="" action="index.html" method="post">
+                            <fieldset class="form-items">
+
+                            <div class="inline-form-items">
+                                <div>
+                                    <label for="">Nome</label>
+                                    <input type="text" name="" value="" required>
+                                </div>
+                                <div>
+                                    <label for="">Sobrenome</label>
+                                    <input type="text" name="" value="" required>
+                                </div>
+                            </div>
+
+                            <div>
+                                <label for="">Email</label>
+                                <input type="text" name="" value="" required>
+                            </div>
+                            <div>
+                                <label for="">Como podemos ajudá-lo?</label>
+                                <textarea type="text" name="" value="" rows="7" style="resize: none"></textarea>
+                            </div>
+
+                            <div class="contact-checkbox">
+                                <label class ="checkbox-label" for="">
+                                <input type="checkbox" name="" value="Urgente">
+                                <span>Urgente<span></label>
+                            </div>
+
+                            <div>
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </section>
+            </div>
+
             <footer>
 
             </footer>
