--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="css/animations.css" rel="stylesheet">
     </head>
 
-    <body id="body">
+    <body id="body" onclick="alert('Width: ' + window.innerWidth + ' Height: ' + window.innerHeight)">
         <div id="page-landing">
             <div id="page-banner">
                 <header class="container" id="page-header">
