--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="css/animations.css" rel="stylesheet">
     </head>
 
-    <body id="body" onclick="alert('Width: ' + window.innerWidth + ' Height: ' + window.innerHeight)">
+    <body id="body">
         <div id="page-landing">
             <div id="page-banner">
                 <header class="container" id="page-header">
@@ -30,7 +30,7 @@
 
                 <main class="container">
                     <section>
-                    <h1 class="nunito">Segurança e Confiabilidade</h1>
+                    <h1 class="nunito" onclick="this.innerHTML='Width: ' + window.innerWidth">Segurança e Confiabilidade</h1>
                     <p>Temos como princípio a segurança e confiabilidade de nossos clientes.
                     <br>
                     Não mudamos o que é perfeito nem criamos exceções.</p>
