--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <main class="container">
                     <section>
-                    <h1 class="nunito" onclick="this.innerHTML='Width: ' + window.innerWidth">Segurança e Confiabilidade</h1>
+                    <h1 class="nunito" onclick="this.innerHTML='Width: ' + screen.width">Segurança e Confiabilidade</h1>
                     <p>Temos como princípio a segurança e confiabilidade de nossos clientes.
                     <br>
                     Não mudamos o que é perfeito nem criamos exceções.</p>
