--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>VR Elétrica</title>
         <meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale="1.0">
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300;400&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
 
                 <main class="container">
                     <section>
-                    <h1 class="nunito" onclick="this.innerHTML='Width: ' + screen.width">Segurança e Confiabilidade</h1>
+                    <h1 class="nunito" onclick="this.innerHTML='Width inner: ' + window.innerWidth">Segurança e Confiabilidade</h1>
                     <p>Temos como princípio a segurança e confiabilidade de nossos clientes.
                     <br>
                     Não mudamos o que é perfeito nem criamos exceções.</p>
