--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>VR Elétrica</title>
+        <title>VR Elétrica Residencial</title>
         
         <!-- Meta - Links -->
         <meta charset="UTF-8" />
@@ -19,13 +19,15 @@
         <meta itemprop="image" content="https://raw.githubusercontent.com/Hello-Sites/vreletrica/main/.github/social-banner-share.png">
         <!-- SEO - Facebook -->
         <meta property="og:url" content="https://vreletrica.ml/">
-        <meta property="og:site_name" content="Serviços Elétricos">
+        <meta property="og:site_name" content="VRE Elétrica">
+        <meta property="og:title" content="Serviços Elétricos">
         <meta property="og:description" content="Instalação, manutenção e reforma  de instalações elétricas residenciais. COVID-19: Apenas em Cachoeiras de Macacu, RJ.">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://raw.githubusercontent.com/Hello-Sites/vreletrica/main/.github/social-banner-share.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="630">
+        <meta property="og:app_id" content="727883641452924">
 
          <!-- SEO - Twitter -->
         <meta property="twitter:url" content="https://vreletrica.ml/">
@@ -47,6 +49,8 @@
     </head>
 
     <body id="body">
+        <script src="js/facebook.js" type="text/javascript"></script>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
         <div id="page-landing">
             <div id="page-banner">
                 <header class="container" id="page-header">
@@ -172,7 +176,7 @@
                 </section>
                 <section id="contact-form">
 
-                    <div id="gform-sucess-message" style="" class="form-message">
+                    <div id="gform-sucess-message" class="form-message">
                         <h2 class="nunito">Enviado com sucesso!</h2>
                         <p>Agradeçemos seu contato. Retornaremos em breve!</p>
                     </div>
