--- a/index.html
+++ b/index.html
@@ -49,8 +49,27 @@
     </head>
 
     <body id="body">
-        <script src="js/facebook.js" type="text/javascript"></script>
+        
+        <script>
+              window.fbAsyncInit = function() {
+                FB.init({
+                  appId      : '727883641452924',
+                  xfbml      : true,
+                  version    : 'v9.0'
+                });
+                FB.AppEvents.logPageView();
+              };
+
+              (function(d, s, id){
+                 var js, fjs = d.getElementsByTagName(s)[0];
+                 if (d.getElementById(id)) {return;}
+                 js = d.createElement(s); js.id = id;
+                 js.src = "https://connect.facebook.net/en_US/sdk.js";
+                 fjs.parentNode.insertBefore(js, fjs);
+               }(document, 'script', 'facebook-jssdk'));
+        </script>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+        
         <div id="page-landing">
             <div id="page-banner">
                 <header class="container" id="page-header">
