--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="630">
-        <meta property="og:app_id" content="727883641452924">
+        <meta property="fb:app_id" content="727883641452924">
 
          <!-- SEO - Twitter -->
         <meta property="twitter:url" content="https://vreletrica.ml/">
