--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <meta property="og:image:height" content="630">
 
          <!-- SEO - Twitter -->
-        <meta property="twitter:url" content="https://vreletrica.ml/">
-        <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:title" content="VR Elétrica Residencial">
-        <meta property="twitter:description" content="Instalação, manutenção e reforma  de instalações elétricas residenciais. COVID-19: Apenas em Cachoeiras de Macacu, RJ.">
-        <meta property="twitter:image" content="https://github.com/Hello-Sites/vreletrica/blob/main/.github/banner.png">
+        <meta name="twitter:url" content="https://vreletrica.ml/">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="VR Elétrica Residencial">
+        <meta name="twitter:description" content="Instalação, manutenção e reforma  de instalações elétricas residenciais. COVID-19: Apenas em Cachoeiras de Macacu, RJ.">
+        <meta name="twitter:image" content="https://github.com/Hello-Sites/vreletrica/blob/main/.github/banner.png">
         <!-- SEO - END -->    
         
         <link rel="preconnect" href="https://fonts.gstatic.com">
