Corrigir link quebrado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="VR Elétrica Residencial">
         <meta name="twitter:description" content="Instalação, manutenção e reforma  de instalações elétricas residenciais. COVID-19: Apenas em Cachoeiras de Macacu, RJ.">
-        <meta name="twitter:image" content="https://github.com/Hello-Sites/vreletrica/blob/main/.github/banner.png">
+        <meta name="twitter:image" content="https://github.com/Hello-Sites/vreletrica/blob/main/.github/social-banner-share.png">
         <!-- SEO - END -->    
         
         <link rel="preconnect" href="https://fonts.gstatic.com">
