--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- SEO -->
         <meta  name="description" content="Segurança e Confiabilidade. Instalação, manutenção e reforma  de instalações elétricas residenciais. COVID-19: Apenas em Cachoeiras de Macacu, RJ.">
         <link rel="canonical" href="https://vreletrica.ml/">
-        <meta name="robots" content="index, nofollow">
+        <meta name="robots" content="noindex, nofollow">
         <meta http-equiv="content-type"  content="text/html;charset=utf-8">
         <!-- SEO - Google+ -->
         <meta itemprop="name" content="VRE Elétrica Residencial">
