--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         
         <!-- Meta - Links -->
         <meta charset="UTF-8" />
-        <link rel="sortcut icon" href="img/vr-icon.svg" type="image/svg" />
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="sortcut icon" href="/img/favicon.png" type="image/png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="znn-g0IFVwnnti8oeMwQ68RrqUaN0ByaRRFQera9qSI" />
         <!-- SEO -->
         <meta  name="description" content="Segurança e Confiabilidade. Instalação, manutenção e reforma  de instalações elétricas residenciais. COVID-19: Apenas em Cachoeiras de Macacu, RJ.">
