--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         
         <!-- Meta - Links -->
         <meta charset="UTF-8" />
-        <link rel="sortcut icon" href="/img/favicon.png" type="image/png" />
+        <link rel="apple-touch-icon" href="/img/favicon.png" />
+        <link rel="shortcut icon" href="/img/favicon.png" type="image/png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="znn-g0IFVwnnti8oeMwQ68RrqUaN0ByaRRFQera9qSI" />
         <!-- SEO -->
