Fix empty flyer

--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                         <p>Temos compromisso com nossos clientes.</p>
                     </div>
                         
-                    <div
+                    <!-- (unused) <div
                           class="fb-like"
                           data-share="true"
                           data-width="450"
                           data-show-faces="true">
-                    </div>
+                    </div>-->
                 </section>
             </div>
 
